# routes/courses.route.js
@@ -23,17 +23,18 @@ router.get('/ratings', courseController.getRatings)
 // 取得首頁熱門課程資料
 router.get('/popular', courseController.getPopularCourses)
 
-// 取得單一課程資料，要放後面，其他 /xxx 要放前面
-router.get('/:courseId', courseController.getCourse)
 
 // 收藏課程
-router.post('/favorites/:courseId', ...handleMiddleware([isAuth], courseController.postFavoriteCourse))
+router.post('/favorites', ...handleMiddleware([isAuth], courseController.postFavoriteCourse))
 
 // 取得收藏課程
-router.get('/favorites', ...handleMiddleware([isAuth], courseController.getFavoriteCourse))
+router.get('/favorites/list', ...handleMiddleware([isAuth], courseController.getFavoriteCourse))
 
 // 收藏課程
-router.delete('/favorites/:courseId', ...handleMiddleware([isAuth], courseController.deleteFavoriteCourse))
+router.delete('/favorites/:favoriteId', ...handleMiddleware([isAuth], courseController.deleteFavoriteCourse))
+
+// 取得單一課程資料，要放後面，其他 /xxx 要放前面
+router.get('/:courseId', courseController.getCourse)
 
 // 新增標題
 router.post('/create/title', ...handleMiddleware([isAuth], courseController.createCourseTitle)) // 新增課程
